fix: DEPRECATION on columnGap.
division outside of calc() is deprecated and will be removed in Dart Sass 2.0.0.

--- a/client/scss/components/_header.scss
+++ b/client/scss/components/_header.scss
@@ -39,7 +39,7 @@ header {
 
   .btn {
     width: 2 * $columnWidth;
-    margin-left: $columnGap / 2;
+    margin-left: math.div($columnGap, 2);
   }
 
   h1 {
